<resources>
    <string name="app_name">TeamsUp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for Login -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="inic">Iniciar sesión</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="recordar_email">Recordar email</string>
    <string name="registrate">Regístrate</string>
    <string name="text_no_cuenta">¿No tienes cuenta?</string>

    <!-- Strings used for Register -->
    <string name="registrat">Registrarse</string>
    <string name="Nombre">Nombre</string>
    <string name="bntRegis">Registrarse</string>
    <string name="cancelar_registro">Cancelar registro</string>
    <string name="repetir_contraseña">Repetir contraseña</string>
    <string name="politica_privacitat_text">"He leído y acepto la "</string>
    <string name="politica_privacitat">Política de privacidad</string>
    <string name="edad">Introducir edad</string>
    <string name="politica_priv">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>

    <!-- Strings used for User Profile -->
    <string name="mis_eventos">Mis eventos</string>
    <string name="crear_evento">Crear evento</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="direccion">Dirección</string>
    <string name="logout">Desconectar</string>

    <string name="preferencias">Preferencias</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello Round World!</string>
    <!--strings used for home -->
    <string name="recommendedEvents">Eventos recomendados para ti</string>
    <string name="somethingNewEvents">Prueba algo nuevo…</string>

    <!-- Strings used for Create Event -->
    <string name="fecha_evento">Fecha del evento</string>
    <string name="hora">Hora</string>
    <string name="tematica">Introducir temática</string>
    <string name="cancelar_creacion_evento">Cancelar</string>
    <string name="btn_crear_evento">Crear</string>
    <string name="participantes">Número de participantes</string>

    <!-- Strings used for Editar PErfil -->
    <string name="btn_guardar_profile">Guardar</string>
    <string name="title_activity_user_events">UserEvents</string>
    <string name="EventosUsuario">Tus eventos</string>

    <!-- Sports -->
    <string name="tenis">Tenis</string>
    <string name="football">Futbol</string>
    <string name="basket">Baloncesto</string>
    <string name="padel">Padel</string>
    <string name="hockey">Hockey</string>
    <string name="badminton">Badminton</string>
    <string name="voley">Voley</string>
    <string name="pingpong">Ping-Pong</string>
    <string name="baseball">Béisbol</string>
    <string name="bowling">Bolos</string>
    <string name="boxing">Boxeo</string>
    <string name="other">Otros</string>

    <!-- Permissions -->
    <string name="permissions_no_accepted">Por favor, habilita el acceso a la ubicación desde Ajustes</string>
    <string name="permission_denied_explanation">Se necesita otorgar acceso a ubicación para mejorar la experiencia de Usuario</string>
    <string name="settings">Ajustes</string>
    <string name="nombre_evento">Evento1</string>
    <string name="tematicaEvento">Temática</string>
    <string name="aplicar">Solicitar plaza</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="cambiarFoto">Cambiar foto</string>


    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">teamsUP</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_subscribed">Subscribed to teamsup topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to teamsup topic</string>
    <string name="couldNotLoginWithGoogle">Error on google login</string>
    <string name="wifi">Utilizar solo Wi-fi</string>
    <string name="lost_connection">No estas conectado a internet</string>
    <string name="wifi_connected">Conexión wi-fi.</string>
    <string name="any_connected">Utilizando wifi o datos</string>


</resources>