<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8EBF2">

<LinearLayout
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.204">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#3C887E">

        <ImageView
            android:id="@+id/photo_profile"
            android:layout_width="157dp"
            android:layout_height="161dp"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="60sp"
            android:layout_weight="1"
            android:text="@string/nombre_usuario"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/edit_button"
            android:layout_width="19dp"
            android:layout_height="42dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_edit" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="15sp"
            android:backgroundTint="#3C887E"
            android:text="@string/mis_eventos" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15sp"
            android:backgroundTint="#3C887E"
            android:text="@string/crear_evento" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:text="@string/direccion"
            android:textSize="24sp"
            android:textColor="#373F47"/>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:text="@string/preferencias"
            android:textSize="24sp"
            android:textColor="#373F47"/>
    </LinearLayout>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>