<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/registrat"
            android:textAlignment="center"
            android:textColor="#78A0EB"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/Nombre"
            android:inputType="textEmailAddress"
            android:textColor="#78A0EB" />

        <EditText
            android:id="@+id/input_mail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:textColor="#78A0EB" />

        <EditText
            android:id="@+id/input_pswd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="#78A0EB" />

        <EditText
            android:id="@+id/input_pswd2.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/repetir_contraseña"
            android:inputType="textPassword"
            android:textColor="#78A0EB" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#78A0EB"
            android:text="@string/bntRegis"
            android:textColor="#FDFCFC" />

        <TextView
            android:id="@+id/tvCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="cancel"
            android:text="@string/cancelar"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>