<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8EBF2">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#3C887E">

            <TextView
                android:id="@+id/nombreEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:text="@string/nombre_evento"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/edit_button"
                android:layout_width="19dp"
                android:layout_height="42dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_edit" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="445dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/direccionEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:text="@string/direccion"
                android:textSize="24sp"
                android:textColor="#373F47"/>
            <TextView
                android:id="@+id/mailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:text="@string/e_mail"
                android:textSize="24sp"
                android:textColor="#373F47"/>
            <TextView
                android:id="@+id/tematica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:text="@string/tematicaEvento"
                android:textSize="24sp"
                android:textColor="#373F47"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20sp">

                <ImageView
                    android:id="@+id/tematicaImg"
                    android:layout_width="50sp"
                    android:layout_height="50sp" />
            </LinearLayout>




            </LinearLayout>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>